Document ideal ESC behavior
